# lab6

./: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h
